JEP 261 compat fix